- Fix: [#14682] Crash when painting Swinging Ships with invalid subtype.
- Fix: [#14707] Crash when window is closed during text input.
- Fix: [#14710] Ride/Track Design preview does not show if it costs more money than available.
- Fix: [#14774] Incorrect import of scenery research caused all scenery to be unlocked.
- Fix: [#14806] Incorrect function call in WallPlaceAction plugin code.
- Improved: [#14511] “Unlock operating limits” cheat now also unlocks all music.
- Improved: [#14712, #14716]: Improve startup times.

0.3.3 (2021-03-13)
------------------------------------------------------------------------
- Feature: [#6677] Add Discord RPC to macOS builds.
- Feature: [#6844] Enhanced track designer with ability to add/remove scenery and footpaths.
- Feature: [#7059] Landscape doors for the Ghost Train.
- Feature: [#11859] Add on-ride photo section to Air Powered Vertical and Reverse Freefall Coaster.
- Feature: [#12307] Allow extraction of GOG installer via innoextract (for Linux users).
- Feature: [#13057] Make GameAction flags accessible by plugins.
- Feature: [#13078] [Plugin] Add colour picker widget.
- Feature: [#13376] Open custom window at specified tab.
- Feature: [#13384] [Plugin] Expose all TileElement data.
- Feature: [#13398] Add pause button to the Track Designer.
- Feature: [#13436] macOS: use new icon that matches Big Sur's style.
- Feature: [#13495] [Plugin] Add properties for park value, guests and company value.
- Feature: [#13509] [Plugin] Add ability to format strings using OpenRCT2 string framework.
- Feature: [#13512] [Plugin] Add item separators to list view.
- Feature: [#13583] [Plugin] Add allowed_hosts to plugin section of config.
- Feature: [#13593] [Plugin] Add ability to read and change the position of ride vehicles.
- Feature: [#13613] Add single-rail roller coaster (Rocky Mountain Construction Raptor).
- Feature: [#13614] Add terrain surfaces from RollerCoaster Tycoon 1.